mongo: single final products collection, monthly prices collection

--- a/config.ini
+++ b/config.ini
@@ -8,13 +8,23 @@ workdb = parser
 # Collection names
 [coll]
 gestori = gestery_m1
-ilde = ILDE_products
-letu = letu_2017-07-18
+
+# prices (+ date prefix)
+letu = letu_price
+ilde = ILDE_price
+
+# product final collections
+letu_final = letu_products_final
+ilde_final = ILDE_products_final
+
+# supplier price uploads
 sheets = sheets
 supplier = supplier_test
 sheets_rules = sheets_rules
 supplier_info = supplier_info
 history = history
 global_links = ILDE_global_links
-failed_links = ILDE_failed_links
 pagination = ILDE_pagination
+
+# ilde failed url open
+failed_links = ILDE_failed_links
