step1.js: migrated from node to python (step1.py)

--- a/config.ini
+++ b/config.ini
@@ -7,11 +7,12 @@ workdb = parser
 
 # Collection names
 [coll]
-gestori = gestery_m1
+gestori = gestori
 
 # prices (+ date prefix)
 letu = letu_price
 ilde = ILDE_price
+ilde_brands = ILDE_brands
 
 # product final collections
 letu_final = letu_products_final
