fix missing brands, vip price

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 # MongoDB config
 [mongodb]
-conn = mongodb://apidev:apidev@localhost:27017/parser
+conn = mongodb://apidev:apidev@192.168.65.243:27017/parser
 workdb = parser
 #workdb = import-17-07-2017
 
