--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,12 @@
 # MongoDB config
 [mongodb]
-conn = mongodb://apidev:apidev@192.168.65.243:27017/parser
+conn = mongodb://apidev:apidev@localhost:27017/parser
 workdb = parser
 #workdb = import-17-07-2017
 
 # Collection names
 [coll]
-gestori = gestori
+gestori = gestori_rc
 
 # prices (+ date prefix)
 letu = letu_price
